# chippy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: index-CCjeLVRj.css  index-uXHpK3Zk.css
src/: audio.rs  core.rs  main.rs  utils.rs
src/audio/: mod.rs
src/core/: mod.rs
src/core/test/: mod.rs
src/core/test/data/: mod.rs
src/core/test/utils/: mod.rs
src/frontend/: mod.rs
src/frontend/audio/: mod.rs
src/frontend/display/: mod.rs
src/test/: data.rs  mod.rs
src/utils/: mod.rs
web/view/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
web/view/gh-pages/: index.html
web/view/gh-pages/assets/: chippy_bg-D71KsWQT.wasm  index-acoJSmaW.js
web/view/src/: frontend.ts  main.ts  style.less  utils.ts
web/wbg/: Cargo.toml
web/wbg/src/: main.rs
