[package]
name = "chippy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
pretty_assertions = "1.4.0"
basic-emu-frontend = { version = "0.1.0", path = "../basic-emu-frontend" }

[workspace]
members = [
    "run-wasm",
]

[[bin]]
name = "chippy"
path = "src/main.rs"
