[package]
name = "chippy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
pretty_assertions = "1.4.0"
basic_emu_frontend = { git = "https://github.com/djrideout/basic-emu-frontend.git" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.2.0"

[workspace]
members = ["web/wbg"]

[[bin]]
name = "chippy"
path = "src/main.rs"
